# pixman

./: .gitlab-ci.yml  CMakeLists.txt  INSTALL  README  RELEASING  configure.ac  meson.build  release.sh
.gitlab-ci.d/: 01-docker.yml  02-build.yml  03-test.yml  04-summary.yml  pixman-project.yml  platform-templates.yml
.gitlab-ci.d/01-docker/: Dockerfile  Dockerfile.codecov  Dockerfile.pltcov-linux  Dockerfile.pltcov-windows  platform-lookup.awk  platform.lut
.gitlab-ci.d/01-docker/target-env/: linux-386.env  linux-amd64.env  linux-arm-v5.env  linux-arm-v7.env  linux-arm64-v8.env  linux-mips64el.env  linux-mipsel.env  linux-ppc64le.env  linux-riscv64.env
.gitlab-ci.d/meson-cross/: linux-riscv64-gnu.meson  linux-riscv64-llvm.meson  windows-686-gnu.meson
.gitlab-ci.d/pltcov/meson-cross/: linux-mips.meson  linux-ppc.meson  linux-ppc64.meson
.gitlab-ci.d/templates/: build.yml  docker.yml  test.yml
cmake/: CheckCFlag.cmake  CheckInline.cmake  CheckTargetFeature.cmake  config.h.in
demos/: CMakeLists.txt  Makefile.am  dither.c  gtk-utils.c
pixman/: CMakeLists.txt  meson.build  pixman-access.c  pixman-arm-asm.h  pixman-arm-neon-asm.S  pixman-arm-neon-asm.h  pixman-arm-simd-asm-scaled.S  pixman-arm-simd-asm.S  pixman-bits-image.c  pixman-combine-float.c  pixman-fast-path.c  pixman-image.c  pixman-mmx.c  pixman-region.c  pixman-region16.c  pixman-region32.c  pixman-riscv.c  pixman-rvv.c  pixman-utils.c  pixman-vmx.c  pixman-x86.c  pixman.c  pixman.h
test/: CMakeLists.txt  Makefile.am  Makefile.sources  meson.build
test/utils/: utils.h
